tests/errors/from_yaml_invalid_yaml.dang
enum Status { PASSED FAILED }

let status: Status! = YAML.decode("[oops")
